--- a/jquery/jquery-intro-lecture.html
+++ b/jquery/jquery-intro-lecture.html
@@ -10,6 +10,8 @@
               href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
               integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
               crossorigin="anonymous">
+        <link rel="stylesheet"
+              href="./jquery-intro-lecture.css">
         <title>jQuery Intro</title>
     </head>
     <body>
@@ -18,8 +20,106 @@
                 <h1 class="display-4">Let's learn some javascript</h1>
                 <p class="lead">Change this text using jQuery
                 </p>
-                <p>first paragraph</p>
-                <p>second</p>
+            </div>
+        </div>
+        <div class="container top-pars">
+            <div class="row justify-content-center">
+                <div class="col-2 border">
+                    <p>first paragraph</p>
+                </div>
+                <div class="col-2 border">
+                    <p id="second">second paragraph</p>
+                </div>
+                <div class="col-2 border">
+                    <p>third paragraph</p>
+                </div>
+                <div class="col-2 border">
+                    <p>fourth paragraph</p>
+                </div>
+            </div>
+        </div>
+
+        <!--purple divs-->
+        <div class="container top-pars">
+            <div class="row justify-content-center">
+                <div class="col-2 border purple">
+                    <p class="purple-par">first paragraph</p>
+                </div>
+                <div class="col-2 border purple">
+                    <p class="purple-par">second paragraph</p>
+                </div>
+                <div class="col-2 border purple">
+                    <p class="purple-par">third paragraph</p>
+                </div>
+                <div class="col-2 border purple">
+                    <p class="purple-par">fourth paragraph</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- mini exercise-->
+        <div class="container ">
+            <div class="row justify-content-center">
+                <div class="col-3 border">
+                    <p>Lorem ipsum dolor sit amet, <span>you can remove
+                                                         me
+                    </span>consectetur
+                       adipisicing
+                       elit. Ad aliquid atque dolores iste mollitia totam.
+                    </p>
+                </div>
+                <div class="col-3 border">
+                    <p class="show-me">Lorem ipsum dolor
+                                       sit amet, <span>you
+                                                                    can
+                                                             remove
+                                                         me
+                    </span>consectetur
+                                       adipisicing
+                                       elit. Ad aliquid atque dolores iste
+                                       mollitia totam.
+                    </p>
+                </div>
+                <div class="col-3 border">
+                    <p>Lorem ipsum dolor sit amet, <span>you can remove
+                                                         me
+                    </span>consectetur
+                       adipisicing
+                       elit. Ad aliquid atque dolores iste mollitia totam.
+                    </p>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-3 border">
+                    <p class="show-me">Lorem ipsum dolor sit amet,
+                        <span>you can remove
+                                                         me
+                    </span>consectetur
+                                       adipisicing
+                                       elit. Ad aliquid atque dolores iste
+                                       mollitia totam.
+                    </p>
+                </div>
+                <div class="col-3 border">
+                    <p class="show-me" id="all-caps">LOREM IPSUM DOLOR SIT
+                                                 AMET,
+                                       <span> you can remove me</span>
+                                       CONSECTETUR ADIPISCING ELIT.
+                                       ILLUM, ULLAM.
+                    </p>
+
+                </div>
+                <div class="col-3 border">
+                    <p class="show-me">Lorem ipsum dolor sit amet,
+                        <span>you can
+                                                             remove
+                                                         me
+                    </span>consectetur
+                                       adipisicing
+                                       elit. Ad aliquid atque dolores iste
+                                       mollitia totam.
+                    </p>
+                </div>
             </div>
         </div>
 
