--- a/jquery/jquery-intro-lecture.html
+++ b/jquery/jquery-intro-lecture.html
@@ -58,6 +58,18 @@
         </div>
 
         <!-- mini exercise-->
+        <!-- ignore this first container until next mini exercise-->
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-4 pink border">
+                    pink - hide on window load
+                </div>
+                <div class="row-4 orange border">
+                    orange - hide on dom load
+                </div>
+            </div>
+        </div>
+
         <div class="container ">
             <div class="row justify-content-center">
                 <div class="col-3 border">
@@ -101,11 +113,12 @@
                     </p>
                 </div>
                 <div class="col-3 border">
-                    <p class="show-me" id="all-caps">LOREM IPSUM DOLOR SIT
-                                                 AMET,
-                                       <span> you can remove me</span>
-                                       CONSECTETUR ADIPISCING ELIT.
-                                       ILLUM, ULLAM.
+                    <p class="show-me"
+                       id="all-caps">LOREM IPSUM DOLOR SIT
+                                     AMET,
+                        <span> you can remove me</span>
+                                     CONSECTETUR ADIPISCING ELIT.
+                                     ILLUM, ULLAM.
                     </p>
 
                 </div>
@@ -120,6 +133,15 @@
                                        mollitia totam.
                     </p>
                 </div>
+            </div>
+        </div>
+
+        <!-- window.onload -->
+        <div class="container">
+            <div class="row justify-content-center">
+                <img src="https://random.dog/6fb26279-08fb-4e36-9c70-b8d5b1785f87.jpg"
+                     alt="2-doggos-hugging"
+                     class="col-8">
             </div>
         </div>
 
