--- a/jquery/jquery-intro-lecture.html
+++ b/jquery/jquery-intro-lecture.html
@@ -6,24 +6,30 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible"
               content="ie=edge">
+        <!-- bootstrap before css-->
         <link rel="stylesheet"
               href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
               integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
               crossorigin="anonymous">
+        <!-- css -->
         <link rel="stylesheet"
               href="./jquery-intro-lecture.css">
         <title>jQuery Intro</title>
     </head>
+
+
     <body>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="display-4">Let's learn some javascript</h1>
-                <p class="lead">Change this text using jQuery
+                <p class="lead"
+                   id="change-text">Change this text using
+                                    jQuery
                 </p>
             </div>
         </div>
         <div class="container top-pars">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center bg-danger">
                 <div class="col-2 border">
                     <p>first paragraph</p>
                 </div>
@@ -56,6 +62,14 @@
                 </div>
             </div>
         </div>
+
+        <!-- selecting children elements-->
+        <ul>
+            <li><p>Lorem ipsum dolor sit amet.</p></li>
+            <li>two </li>
+            <li>three</li>
+            <li>four</li>
+        </ul>
 
         <!-- mini exercise-->
         <!-- ignore this first container until next mini exercise-->
@@ -149,17 +163,23 @@
         <!--STEP ONE: DOWNLOAD JQUERY-->
         <!--JQUERY DOWNLOADED-->
         <!--<script src="jquery-2.2.4.js"></script>-->
+
+        <script src="../../"></script>
+
+        <!-- EITHER CHOOSE JQUERY DOWNLOADED **OR** CDN -->
+
         <!--JQUERY VIA CDN-->
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"
                 integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
                 crossorigin="anonymous"></script>
 
-        <!-- STEP TWO: INCLUDE BOOTSTRAP AFTER JQUERY IF NEEDED-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-                integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
-                crossorigin="anonymous"></script>
+        <!--&lt;!&ndash; STEP TWO: INCLUDE BOOTSTRAP AFTER JQUERY IF NEEDED&ndash;&gt;-->
+        <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"-->
+        <!--        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"-->
+        <!--        crossorigin="anonymous"></script>-->
 
-        <!-- STEP TWO: LINK YOUR JS FILE-->
+        <!-- STEP THREE: LINK YOUR JS FILE-->
         <script src="./jquery-intro-lecture.js"></script>
     </body>
 </html>
+
