--- a/jquery/jquery-intro-lecture.html
+++ b/jquery/jquery-intro-lecture.html
@@ -65,8 +65,10 @@
 
         <!-- selecting children elements-->
         <ul>
-            <li><p>Lorem ipsum dolor sit amet.</p></li>
-            <li>two </li>
+            <li>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </li>
+            <li>two</li>
             <li>three</li>
             <li>four</li>
         </ul>
@@ -84,14 +86,21 @@
             </div>
         </div>
 
+        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+             Eaque magnam molestiae officiis quo, ullam veritatis. A amet
+             excepturi hic illum ipsum laborum mollitia nam nisi porro
+             praesentium, quo saepe, tempora?
+        </div>
         <div class="container ">
             <div class="row justify-content-center">
                 <div class="col-3 border">
-                    <p>Lorem ipsum dolor sit amet, <span>you can remove
+                    <p id="blue">Lorem ipsum dolor sit amet, <span>you can
+                                                               remove
                                                          me
                     </span>consectetur
-                       adipisicing
-                       elit. Ad aliquid atque dolores iste mollitia totam.
+                                 adipisicing
+                                 elit. Ad aliquid atque dolores iste
+                                 mollitia totam.
                     </p>
                 </div>
                 <div class="col-3 border">
