--- a/jquery/jquery-intro-lecture.html
+++ b/jquery/jquery-intro-lecture.html
@@ -168,6 +168,12 @@
             </div>
         </div>
 
+        <div class="container">
+            <div class="row">
+                <button class="border">Click Me!</button>
+            </div>
+        </div>
+
 
         <!--STEP ONE: DOWNLOAD JQUERY-->
         <!--JQUERY DOWNLOADED-->
